force-app/main/default/objects/Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>