force-app/main/default/objects/Invoice__c/fields/Payment_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_QR_Code__c</fullName>
    <label>Payment QR Code</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>