force-app/main/default/objects/Invoice__c/fields/Reference_number__c.field-meta.xml
<CustomField>
    <fullName>Reference_number__c</fullName>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>