force-app/main/default/objects/Invoice__c/fields/Stripe_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Invoice_Link__c</fullName>
    <label>Stripe Invoice Link</label>
    <type>Url</type>
</CustomField>