force-app/main/default/objects/Invoice__c/listViews/All_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Invoices</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Invoices</label>
</ListView>